final production code

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Loader -->
     <div class="loader" id="loader"></div>
 
-    <!-- script -->
+    <!-- Script -->
     <script src="quotes.js"></script>
     <script src="script.js"></script>
 </body>
